@@ -1074,9 +1074,9 @@ function make_trigger_details($trigger) {
 	$scripts = API::Script()->getScriptsByHosts($hostIds);
 
 	foreach ($hosts as $host) {
-		$hostName = new CSpan($host['name'], ZBX_STYLE_LINK_ACTION);
-		$hostName->setMenuPopup(CMenuPopupHelper::getHost($host, $scripts[$host['hostid']]));
-		$hostNames[] = $hostName;
+		$hostNames[] = (new CSpan($host['name']))
+			->setMenuPopup(CMenuPopupHelper::getHost($host, $scripts[$host['hostid']]))
+			->addClass(ZBX_STYLE_LINK_ACTION);
 		$hostNames[] = ', ';
 	}
 	array_pop($hostNames);
@@ -1894,8 +1894,12 @@ function evalExpressionData($expression, $replaceFunctionMacros) {
 		$evStr .= ' '.$value;
 	}
 
+	$result = null;
+
 	// execute expression
+	ob_start();
 	eval('$result = ('.trim($evStr).');');
+	ob_get_clean();
 
 	return $result;
 }
